--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -7,12 +7,12 @@ dock_filesystem_file_list_display_mode=1
 dock_split_2=0
 dock_split_3=0
 dock_hsplit_1=0
-dock_hsplit_2=242
-dock_hsplit_3=-323
+dock_hsplit_2=446
+dock_hsplit_3=-866
 dock_hsplit_4=0
 dock_3="Scene,Import"
 dock_4="FileSystem"
-dock_5="Inspector,Node,EditorDebugger"
+dock_5="Inspector,Node"
 
 [EditorNode]
 
@@ -20,7 +20,7 @@ open_scenes=["res://addons/gotoggl/keysetup.tscn"]
 
 [ScriptEditor]
 
-open_scripts=["res://addons/gotoggl/gotoggl.gd", "res://addons/gotoggl/keygen.gd", "res://addons/gotoggl/togglkey.json"]
+open_scripts=["res://addons/gotoggl/gotoggl.gd", "res://addons/gotoggl/keygen.gd"]
 open_help=[]
 script_split_offset=70
 list_split_offset=0
